# pinkcode

./: .env  Cargo.toml  Dockerfile  fly.toml  vercel-build.sh  vercel.json
src/: .dockerignore  .gitignore  Dockerfile  main.rs
